# TtDebugTool

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.7fd8ddf  README.md
DebugTool/: CMakeLists.txt
DebugTool/lib_base/: CMakeLists.txt
DebugTool/lib_base/base/: basic_pch.h  basic_types.h  encode_helper.h  flags.h  glog_helper.h  wchar_logging.h
DebugTool/lib_ui/: CMakeLists.txt
DebugTool/lib_ui/ui/: Def.h  TtTheme.h  TtTheme_p.h  abstract_button.cpp  click_handler.cpp  click_handler.h  singleton.h
DebugTool/lib_ui/ui/control/: TtCheckBox.cpp  TtComboBox.cpp  TtComboBox.h  TtComboBox_p.h  TtContentDialog.cpp  TtContentDialog.h  TtContentDialog_p.h  TtDialog.cpp  TtDialog.h  TtDrawer.cpp  TtDrawer.h  TtIconButton.cpp  TtIconButton.h  TtLineEdit.cpp  TtLineEdit.h  TtLineEdit_p.h  TtListView.cpp  TtListView.h  TtLoadingWidget.cpp  TtLoadingWidget.h  TtMaskWidget.cpp  TtMaskWidget.h  TtMaskWidget_p.h  TtPopUpDrawer.cpp  TtPopUpDrawer.h  TtPopUpDrawer_p.h  TtRadioButton.cpp  TtScrollBar.cpp  TtSwitchButton.cpp  TtSwitchButton.h  TtTextButton.cpp  TtTextButton.h  TtTextButton_p.h
DebugTool/lib_ui/ui/effects/: animated_drawer.h  animation_value.cpp  animation_value.h
DebugTool/lib_ui/ui/layout/: horizontal_layout.cpp  horizontal_layout.h  vertial_layout.cpp
DebugTool/lib_ui/ui/res/: res.qrc
DebugTool/lib_ui/ui/style/: TtBaseTableStyle.cpp  TtBaseTableStyle.h  TtCheckBoxStyle.cpp  TtComboBoxStyle.cpp  TtComboBoxStyle.h  TtLineEditStyle.cpp  TtLineEditStyle.h  TtListViewStyle.h  TtRadioButtonStyle.cpp  TtScrollBarStyle.cpp  TtScrollBarStyle.h  style_font.cpp  style_font.h
DebugTool/lib_ui/ui/text/: text_entity.h
DebugTool/lib_ui/ui/widgets/: buttons.cpp  buttons.h  collapsible_panel.cpp  collapsible_panel.h  customizationtabwidget.cpp  customizationtabwidget.h  labels.cpp  message_bar.cpp  message_bar.h  message_bar_p.cpp  message_bar_p.h  overlay_widget.cpp  overlay_widget.h  widget_group.cpp  widget_group.h
DebugTool/res/: shared.qrc
DebugTool/res/cmake/: WinResource.rc.in
DebugTool/res/language/: DebugTool_en.qm  DebugTool_en.ts  DebugTool_zh_CN.ts  TtDebugTool_en.qm  TtDebugTool_en.ts  TtDebugTool_zh.ts  TtDebugTool_zh_CN.ts
DebugTool/res/styles/: dark-style-modern.qss  dark-style.qss  theme.qrc
DebugTool/res/styles/qt_material/: material.css.template
DebugTool/res/sys-gif/: sys-gif.qrc
DebugTool/res/sys-icon/: sys-icon.qrc
DebugTool/res/windowbar/: windowbar_icon.qrc
DebugTool/src/: Def.h  main.cpp  pch.h
DebugTool/src/core/: download.cpp  download.h  frame_setting_helper.cpp  frame_setting_helper.h  lua_kernel.cpp  lua_kernel.h  modbus_client.cpp  modbus_client.h  modbus_server.cpp  modbus_server.h  mqtt_client.cpp  mqtt_client.h  serial_helper.cpp  serial_helper.h  serial_port.cpp  serial_port.h  tcp_server.cpp  tcp_server.h  udp_client.cpp  udp_client.h  udp_server.cpp  udp_server.h
DebugTool/src/data/: communication_metadata.h
DebugTool/src/lang/: translation_manager.cpp  translation_manager.h
DebugTool/src/storage/: configs_manager.cpp  configs_manager.h  csv_handler.cpp  csv_handler.h  setting_manager.cpp  setting_manager.h
DebugTool/src/ui/controls/: TtChannelButton.cpp  TtChannelButton.h  TtChannelButtonEditorDialog.cpp  TtChannelButtonEditorDialog.h  TtColorButton.cpp  TtColorButton.h  TtColorButtonEditorDialog.cpp  TtColorButtonEditorDialog.h  TtDownloadDialog.cpp  TtDownloadDialog.h  TtLuaInputBox.cpp  TtLuaInputBox.h  TtModbusDelegate.cpp  TtModbusDelegate.h  TtModbusPlot.cpp  TtModbusPlot.h  TtPlotItem.cpp  TtPlotItem.h  TtPlotWidget.cpp  TtPlotWidget.h  TtQCPItemRichText.cpp  TtQCPItemRichText.h  TtQCustomPlot.cpp  TtQCustomPlot.h  TtSerialLexer.cpp  TtSerialLexer.h  TtSerialPortPlot.cpp  TtSerialPortPlot.h  TtTableView.cpp  TtTableView.h  TtTerminalLexer.cpp  TtTerminalLexer.h
DebugTool/src/ui/widgets/: data_presentation_widget.h  pop_widget.cpp  pop_widget.h  session_manager.cpp  session_manager.h  tabwindow.h  (+8 more)
DebugTool/src/widget/: frame_setting.cpp  frame_setting.h  modbus_setting.cpp  modbus_setting.h  mqtt_meta_setting_widget.cpp  mqtt_meta_setting_widget.h  mqtt_setting.cpp  mqtt_setting.h  serial_setting.cpp  serial_setting.h  shortcut_instruction.h  subscripition_widget.cpp  subscripition_widget.h  tcp_setting.cpp  tcp_setting.h  udp_setting.cpp  udp_setting.h
DebugTool/src/window/: frame_window.cpp  frame_window.h  function_selection_window.cpp  function_selection_window.h  instruction_window.cpp  instruction_window.h  left_bar.h  main_window.cpp  main_window.h  modbus_window.cpp  modbus_window.h  mqtt_window.cpp  mqtt_window.h  popup_window.cpp  popup_window.h  serial_window.cpp  serial_window.h  tcp_window.cpp  tcp_window.h  udp_window.cpp  udp_window.h
SerialportTool/: CMakeLists.txt
SerialportTool/lib_base/: CMakeLists.txt
SerialportTool/lib_base/base/: basic_pch.h  time.h  timer.cpp  timer.h
SerialportTool/lib_ui/: CMakeLists.txt
SerialportTool/lib_ui/ui/: Def.h  TtTheme.cpp  TtTheme.h  abstract_button.h  mb_widget.h  ui_pch.h
SerialportTool/res/font/: font.qrc
SerialportTool/res/sys-icon/: sys-icon.qrc
SerialportTool/src/: Def.h  main.cpp  stdafx.h
SerialportTool/src/core/: modbus_client.cpp  modbus_client.h  mqtt_client.h  serial_port.cpp  serial_port.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h  udp_server.cpp  udp_server.h
SerialportTool/src/storage/: setting_manager.h
SerialportTool/src/widget/: modbus_setting.cpp  modbus_setting.h  mqtt_meta_setting_widget.cpp  mqtt_meta_setting_widget.h  mqtt_setting.cpp  serial_operation.cpp  serial_operation.h  serial_setting.cpp  serial_setting.h  shortcut_instruction.cpp  subscripition_widget.cpp  subscripition_widget.h  tcp_setting.cpp  tcp_setting.h  udp_setting.cpp  udp_setting.h
SerialportTool/src/window/: function_selection_window.cpp  function_selection_window.h  left_bar.cpp  main_window.cpp  main_window.h  modbus_window.cpp  modbus_window.h  mqtt_window.cpp  mqtt_window.h  popup_window.cpp  popup_window.h  serial_window.cpp  serial_window.h  tcp_window.cpp  tcp_window.h  udp_window.cpp  udp_window.h
(+109 files in other folders)
